--- a/src/lib/perseus.css
+++ b/src/lib/perseus.css
@@ -1328,7 +1328,8 @@ body.mobile .categorizer-container td.category input[type="radio"] + span:active
   margin: auto;
 }
 .perseus-widget-expression-old > .output > .placeholder > .error > .buddy {
-  background-image: url(/images/perseus/error-buddy.png);
+  /* TODO: This image doesn't exist for us, and fails the build! */
+  /* background-image: url(/images/perseus/error-buddy.png); */
   background-size: 100%;
   height: 36px;
   width: 40px;
